<resources>
    <string name="app_name">Ultimate Knitting Calculator</string>
    <string name="title_home">Stitches</string>
    <string name="title_dashboard">Conversion</string>
    <string name="title_notifications">Notifications</string>
    <string name="inc_dec_desc">This calculator allows you to calculate 2 different methods of increasing or decreasing your stitches.</string>
    <string name="til_pattern_yarn_hint">Project yarn amount</string>
    <string name="til_skein_weight_hint">Skein/ball weight</string>
    <string name="til_skein_yardage_hint">Skein/ball yardage</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_increase">Increase</string>
    <string name="btn_decrease">Decrease</string>
    <string name="til_current_stitches">Current stitches</string>
    <string name="tv_dec_warning">Can\'t decrease by more than half the number of stitches</string>
    <string name="tv_inc_warning">Can\'t increase by more than or equal to the number of stitches</string>
    <string name="tv_inc_dec_info">
      This calculator will help you figure out how to increase or decrease evenly across a row.\n\nJust input the current number of stitches and the number you want to increase/decrease by.\n\nThe first method will typically be easier to knit but may result in a non-symmetric increase/decrease. However, for most projects this will be fine.\n\nThe second method will be more balanced and will try to be as symmetric as possible around the centre stitch.
    </string>
    <string name="tv_conv_info">
      This calculator will estimate the weight of yarn you will need as well as the number of skeins.&lt;br&gt;&lt;br&gt;You will need to input the relevant information which can usually be found on the ball label of your skein.&lt;br&gt;&lt;br&gt;If it isn\'t there it may be possible for you to find it on &lt;a href=https://www.ravelry.com&gt;Ravelry&lt;/a&gt;
    </string>
    <string name="feedback_subtitle">Provide your comments, suggestions and general feedback.</string>
    <string name="feedback_box_hint">Feedback... (Required)</string>
    <string name="til_inc_dec_hint">No. to increase</string>
    <string name="et_feedback_name_hint">Name... (Optional)</string>
    <string name="et_feedback_email_hint">Email... (Optional)</string>
    <string name="menu_dark_mode">Enable Dark Mode</string>
    <string name="menu_settings">Settings</string>

</resources>
