<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >


  <android.support.constraint.Guideline
    android:id="@+id/gl_left_convert_v"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".05"/>

  <android.support.constraint.Guideline
    android:id="@+id/gl_right_convert_v"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".95"/>

  <android.support.constraint.Guideline
    android:id="@+id/gl_convert_h"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="335dp"/>

  <android.support.constraint.Guideline
    android:id="@+id/gl_spinner_v"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.66"/>

  <Spinner
    android:id="@+id/spinner_yardage"
    style="@android:style/Widget.Material.Spinner.Underlined"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="0dp"
    app:layout_constraintBottom_toBottomOf="@+id/til_project_yarn"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toEndOf="@id/gl_spinner_v"
    app:layout_constraintTop_toTopOf="@+id/til_project_yarn"/>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_project_yarn"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/til_pattern_yarn_hint"
    app:boxStrokeWidth="1dp"
    app:layout_constraintBottom_toTopOf="@+id/til_skein_weight"
    app:layout_constraintEnd_toStartOf="@+id/gl_spinner_v"
    app:layout_constraintHorizontal_bias="0.75"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_yardage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:ems="10"
      android:inputType="numberDecimal"
      android:textSize="16sp"/>

  </android.support.design.widget.TextInputLayout>


  <Spinner
    android:id="@+id/spinner_weight"
    style="@android:style/Widget.Material.Spinner.Underlined"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="0dp"
    app:layout_constraintBottom_toBottomOf="@+id/til_skein_weight"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toEndOf="@id/gl_spinner_v"
    app:layout_constraintTop_toTopOf="@+id/til_skein_weight"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_skein_weight"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/til_skein_weight_hint"
    app:boxStrokeWidth="1dp"
    app:layout_constraintBottom_toTopOf="@+id/til_skein_yardage"
    app:layout_constraintEnd_toStartOf="@+id/gl_spinner_v"
    app:layout_constraintHorizontal_bias="0.75"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@id/til_project_yarn">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_skein_weight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:ems="10"
      android:inputType="numberDecimal"
      android:textSize="16sp"
      />
  </android.support.design.widget.TextInputLayout>

  <Spinner
    android:id="@+id/spinner_skein_yardage"
    style="@android:style/Widget.Material.Spinner.Underlined"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="0dp"
    app:layout_constraintBottom_toBottomOf="@+id/til_skein_yardage"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toEndOf="@id/gl_spinner_v"
    app:layout_constraintTop_toTopOf="@+id/til_skein_yardage"/>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_skein_yardage"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/til_skein_yardage_hint"
    app:boxStrokeWidth="1dp"
    app:layout_constraintBottom_toTopOf="@+id/btn_convert"
    app:layout_constraintEnd_toStartOf="@+id/gl_spinner_v"
    app:layout_constraintHorizontal_bias="0.75"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@id/til_skein_weight"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_skein_yardage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:ems="10"
      android:inputType="numberDecimal"
      android:textSize="16sp"
      />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.button.MaterialButton
    android:id="@+id/btn_convert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="0dp"
    android:text="@string/btn_calculate"
    android:textColor="?attr/backgroundColor"
    app:backgroundTint="@color/colorAccent"
    app:layout_constraintBottom_toTopOf="@+id/gl_convert_h"
    app:layout_constraintEnd_toStartOf="@+id/btn_convert_clear"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@+id/til_skein_yardage"
    app:layout_constraintVertical_chainStyle="spread_inside"
    app:rippleColor="?attr/primaryTextColor"
    style="?android:attr/borderlessButtonStyle"
    />

  <android.support.design.button.MaterialButton
    android:id="@+id/btn_convert_clear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:elevation="0dp"
    android:text="@string/btn_clear"
    android:textColor="?attr/colorAccent"
    app:backgroundTint="?attr/backgroundColor"
    app:layout_constraintBottom_toTopOf="@+id/gl_convert_h"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toEndOf="@+id/btn_convert"
    app:layout_constraintTop_toBottomOf="@+id/til_skein_yardage"
    app:rippleColor="?attr/primaryTextColor"
    app:strokeColor="?attr/primaryTextColor"
    app:strokeWidth="1dp"
    style="?android:attr/borderlessButtonStyle"/>


  <TextView
    android:id="@+id/tv_yarn_weight"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="10dp"
    android:background="@drawable/pink_outline"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@+id/tv_num_balls"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@+id/btn_convert"/>

  <TextView
    android:id="@+id/tv_num_balls"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="10dp"
    android:background="@drawable/pink_outline"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@+id/tv_yarn_weight"/>

  <TextView
    android:textSize="14sp"
    android:id="@+id/tv_conv_info"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="?attr/secondaryTextColor"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/gl_right_convert_v"
    app:layout_constraintStart_toStartOf="@+id/gl_left_convert_v"
    app:layout_constraintTop_toBottomOf="@+id/tv_yarn_weight"
    app:layout_constraintVertical_bias="0.3"/>


</android.support.constraint.ConstraintLayout>